[css-grid] Fix line name positions after implicit tracks https://bugs.webkit.org/show_bug.cgi?id=214315

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Expect the tests to pass.

* web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-implicit-track-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-implicit-track-expected.txt:

Source/WebCore:

When serializing grid-template-rows/columns of a grid container, we get
the list of used track sizes, and then insert line names at the
corresponding indices.

Before this patch, these indices were simply taken from the computed
value. However, leading implicit tracks appear in the used value but not
in the computed one. Therefore, we have to offset the indices so that
the line names appear at the proper positions.

This patch is a port of https://crrev.com/777829

Tests: imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-columns-computed-implicit-track.html
       imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-rows-computed-implicit-track.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::populateGridTrackList):
(WebCore::valueForGridTrackList):
* rendering/RenderGrid.h:


Canonical link: https://commits.webkit.org/227215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264465 268f45cc-cd09-0410-ab3c-d52691b4dbfc